# api/api-spec.json
@@ -18,6 +18,7 @@
                 "type": "object",
                 "properties": {
                   "email": { "type": "string", "format": "email" },
+                  "phone": { "type": "string", "example": "081111111111" },
                   "student_nisn": {
                     "type": "string",
                     "description": "Student nisn",
@@ -29,7 +30,7 @@
                     "minLength": 8
                   }
                 },
-                "required": ["email", "student_nisn", "password"]
+                "required": ["email", "student_nisn", "password", "phone"]
               }
             }
           }
@@ -640,13 +641,9 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "item_name": {
-                    "type": "string",
-                    "example": "pembayaran buku semester 1"
-                  },
-                  "amount": {
-                    "type": "number",
-                    "example": 500000
+                  "fee_id": {
+                    "type": "integer",
+                    "example": 1
                   }
                 }
               }
